--- a/修士/托业/笔记/国版1.md
+++ b/修士/托业/笔记/国版1.md
@@ -1,8 +1,63 @@
-#### 国版1
-pavement      n 路面，人行道   cross the pavement
-sweep            n,v 清理，打扫        sweeping the steps 清扫阶梯
+#### 听力
++ 1-6
+furniture n.家居
+*They are moving some furniture*
+carpet n.地毯
+*They are cleaning the carpet.*
+converse v.交谈；谈话；n.相反的言论；adj.相反的；颠倒的
+*They are conversing each other happliy.*
+sunglasses n.墨镜
+*They're putting on their sunglasses.*
+quarrel n.v.争吵；吵架
+*They're quarreling with another one.*
+stare n.v.凝视；盯着看；
+*The woman is staring the man.*
+assistant n.助手；助理；adj.助理的；辅助的
+*The woman is an assistant.*
+mountain n.山脉；大量；一大堆
+*Mountains are covered with trees.*
 statue            n 雕像
 situated         adj,v 位于..地方
+*A statue is situated in front of the buiding.*
++ 7-31
+chief n.领袖；首领；adj.主要的；首要的
+inspector n.检查员；巡视员；视察员
+*I got the position of chief inspector in the end.*
+promotion n.促进；提升；推广
+*How shall we celebrate Mrs.Williams promotion?*
+annual summit  年度首脑会议
+salary n.薪水
+*May I talk to the HR manager about employee salaries?*
+wait in line 排队等候
+leather n.皮革
+*Yes, my bags made of leather.*
++ 32-34
+presentation  n.演出；展示；陈述；报告
+make a favor 帮个忙
+*Counld you do me a favor and call the hotel we deal with to make reservations for three rooms?*
++ 34-37
+carpet n.地毯
+*Yes, I saw an ad about your special sale on the new "easy clean" carpets.*
+about to 即将；刚要
++ 38-40
+gut feeling 直觉
+land this contract  签订这份合同
+close a deal  完成一份交易
+*I have a gut feeling that I am going to land this contract.*
++ 44-46
+deposit v.n.存款；押金；
+crowded adj.拥挤；密集的；crowd v.
+teller n.讲述者；点票员；出纳员
+*I need to get back to office, but I also have to make a deposit.*
+*Good idea. The bank should not be crowded then. I'am going to stay and wait. I wish that they had more tellers working though.*
++ 47-49
+narrow adj.狭窄的；狭小的 v.使狭小
+alley  n.小巷；胡同
+*Jackson is a narrow alley right across from Delaware Park near Hooper Street.*
+#### 阅读
+pavement      n 路面，人行道   cross the pavement
+sweep            n,v 清理，打扫        sweeping the steps 清扫阶梯
+
 IT department   it部门
 hand it           v.递交
 document      n.文档
@@ -11,7 +66,7 @@ intern             n.实习生 v.做实习生，扣留    intern in a company
 postpione      n.推迟，延迟        postpone the appointment 推迟预约
 reserve           v.保留;预定 n.储备;保留;候补    reserve rooms at a hotel
 purchase       v.n.购买，采购
-+ part 5
+##### part 5
 head office    n. 总公司
 port               n.港口         port city 港口城市
 transportation   n.运输；运输系统；交通工具     
@@ -86,7 +141,7 @@ gourmet festival  美食节
 convenient  adj.方便的；便利的；   *please come whenever it is convenient to me*
 essential      adj.必须的；基本的；本质的； n.必需品
 in case   万一
-+ part 6
+##### part 6
 *131. It is (essential) to renew your license on or before this date in case you have to take a driving test.*
 throughout   介词.遍及；各处；自始至终； 副词.自始至终；到处
 State    n.国家；洲；政府 adj. 国家控制、提供的
@@ -110,7 +165,7 @@ stand-up comedy acts 单口相声演员
 *139. The Halls have disclosed their schedules for the upcoming season, with everything (from) classical music to stand-up comedy acts and lots in between.*
 debut  n.首次登场；首次
 be set to  被安排做某事
-*140. The Smith are set to make their debut at 100-years-old Albert Hall om Mar.18, 2015.*
+*140. The Smith are set to make their debut at 100-years-old Albert Hall on Mar.18, 2015.*
 venerable  adj.值得尊敬的；庄严的
 venue  n.举办地点；会场；（比赛）地点
 *141. The venerable venue alse will host Bruce Thornton on Mar.20.*
@@ -134,9 +189,212 @@ significant adj.重大的；重要的；影响明显的；意味深长的
 development n.发展；开发
 sacrifice n.供奉；祭品；牺牲品；v.牺牲；献出；供奉
 *146. We think him for his significant (contributions) to this company and wish him well in his future development.*
-+ part 7
+##### part 7
 instruct v.教授；教导；指示；命令；通知
 as instructed yesterday  按照昨天的指示
 book n.书 v.预定
 accommodation n.住处；工作场所；停留处；膳宿；空间
 *As instructed yesterday, I have booked your accommodations at the Bourne Moto Inn for your business trip to Pennsylvania.*
+executive n.决策人；行政官；管理人员；adj.行政的；决策的
+suite n.套房；随从；组曲；一套家具
+executive suite 行政套房；商务套房
+facility n.设施；特定场所；特色功能；资质
+*I reserved an executive suite for you from July 7 to 11.To view pictures of the room and the other hotel facilities,you can visit www.xxx.com/photos.*
+accordance n.一致，符合
+in accordance  按照，与。。。一致
+policy n.政策；方针
+*In accordance with the hotel's policy, you should call 24 hours before your arrival to confrim the booking.*
+assgin v.分配；指派
+*If you fail to do thie,the hotel may assign your room to another guest.*
+retain v.保留；保持
+accounting department 财务部门
+*Be sure to retain all of your receipts so that you can claim reimbursement from the accounting department when you return.*
+vacancy  n.空虚；空额；空缺；空职
+*148. It currently has no vacancies.*
+borough n.自治市镇或区
+gazette n.报纸（作名字）；公报
+*The Martin borough gazette*
+academy  n.学院
+*Former Martin borough Music Academy student Paul Cohen has won the 2010 National Jazz Award.*
+contest n.比赛；竞争；v.竞争；争夺；争辩；辩驳
+performe v.表演；执行；履行；表现
+ensemble n.全体；剧团；合奏曲；套装
+*To win the contest, Cohen, a jazz guitar specialist, performed an ensemble that he had written himself.*
+unanimously 副词. 全体一致地；无异议的
+*The judes,including jazz legends sunch as Leo, Noel, and Dusty, unanimously picked Cohen as the winner.*
+originality n.独创性；创造力；新颖
+*They areed that his performace displayed an outstanding balance of technical skill and creative originality.*
+scholarship n.奖学金；学问；学识
+prestigious adj.享有声望的
+*Cohen has won a year-long scholarship to the prestigious School of Music in New Orleans.*
+be expected to do sth  被期待做某事；预计做某事
+head n.头；首脑；上端 v.朝。。。行进；居首位；领导 adj.主要的
+*Cohen is expected to head to New Orleans in September this year.*
+photocopiers n.复印机；影印机
+*web received your order for 27 fax machines, model No.94 and 12 photocopiers, model No.31 and wish to thank you.*
+term n.学期；术语；期间；条款
+*The details of our business terms are enclosed.*
+quote v.引用；报价；n.引文；报价
+insurance n.保险
+transport n.运输
+*The price quoted includes insurance and transport charges up to the port of Tokyo.*
+delivery n.传送；交付；分娩
+invoice n.发票；发货单 v.开发票；记清单
+wire n.金属丝；电线；电报；v.发电报；装电线
+transfer v.n.转移；转让；调任
+wire transfer 电汇；银行电子转账
+check drawn on a U.S bank  US银行的支票
+within  副词.在里面；在内部；不超过 介词.在...之内；n.内部，里面
+*We require payment in U.S dollars within 30 days of delivery of our invoice, either by wire transfer to our bank account from a U.S.bank, or by a chek drawn on a U.S.bank.*
+arrangement n.安排；商定
+ship  n.船；舰；v.使乘船；在船上工作
+consignment  n.委托；寄售；托付  consign v.委托；交付；托运；寄售
+written confirmation 书面确认
+*As soon as we receive written confirmation of your order, we will make arrangements for shipping the consignment.*
+merchandise n.商品；货物；n.推销；销售
+*The price of the merchandise is going to be reduced significantly*
+maintenace n.维持；维修；保养
+fee 费用
+marine  adj.海生的；海事的
+**
+ feature n.特征；报刊特写 v.以...为特色；是....的重要组成；放映
+participate v.参加；参与
+witnessed v.见证
+*The program will feature news submitted by viewers, who participated in or witnessed an event that has made headlines across the nation.*
+certain  adj.确定的；一定的；一定程度上的；确定的
+*We are certain our show will be a great success.*
+sponsor n.赞助商；发起人；v.赞助；主办
+*If you would like more information about News Viewors if you wish to sponsor the program, please contact me and i will be happy to assist you.*
+purpose n.目的，意图
+*Which is NOT a purpose of the email?*
+solicit   v.恳求；征求；（妓女）拉客
+*To solicit sponsorship*
++ 156-158
+withdraw v.撤回；撤退；提取
+membership n.会员资格；全体会员
+*I am writting to withdraw my membership from your online languages courses.*
+inconvenient adj.不方便的；麻烦的
+*Since I don't have a printer in my house, it  is very inconvenient for me.*
+frustrated adj.失意的；挫败的 v.frustrate 挫败；使沮丧
+*I was also frustrated with your free course which was recorded 8 years ago.*
+guarantee v.保证；确保 n.保证书；保证
+indicate v.指示；表明
+*I wonder that what happened to all the guarantees you have indicated in your advertisement.*
+entitle v.授权；命名；给。。。权利；entitled adj.有资格的
+refund  v.退还；偿还； n.退款；返还款
+*I think I am entitled to receive a refund*
+warranty n.保证书；保证；保修单
+*A product warranty.   产品保修单*
+installment n.分期连载；分期付款（的一期）
+*The online course was paid in installment.*
++ 159-161
+citizen herald  公民先驱报
+award-winning 获奖的
+publication n.发表；发布；出版；出版物
+insight n.洞察力；见识
+insightful adj.富有洞察力的；有深刻了解的
+article n.文章；冠词；物品
+piece n.片；块；张；根
+column n.圆柱，专栏；纵；列
+editorial adj.编辑的；社论的；n.社论
+*Every month, this awrd-winning publication includes insightful articles, editorial pieces, and colums by experts in finance and economics.*
+issue n.问题；发行（物）；重要议题；流出 v.发行；发表；流出；在....上挑起争论
+*Please allow two to three weeks for your first issue to arrive.*
++ 162-165
+conference n.商讨；大型会议
+carrier n.病毒携带者；运输公司；运输工具
+*Sky High Air and Mountain High Airlines will serve as the official carriers for attendees of the Forty-Five Annual NACU Conference.*
+fares 票价
+*Both carriers have agreed to offer low fares for conference attendees*
+refer to 查阅；提到；涉及；指的是
+convention n.习俗；大会；协定
+*call Sky High Air at ... and refer to Convention Number CV786309.*
+reservation n.预定；保留
+registration n.登记；注册；挂号
+agency n.机构；局；代理处
+*No reservations are required, but tickets must be purchased at the Airporter main desk, at the conference registration desk in the convention center, or at the travel agency located in Regency Hotel.*
+appropriate adj.适当的；恰当的 v.拨出（专款）；盗用；侵吞
+*Appropriate fare to downtown hotels is $18.00-$25.00*
++ 166-168
+collaboration n.合作；协作；通敌；勾结
+regard n.敬意；致意；v.尊敬；致意
+*With regard to your proposal of as possible collaboration between Security Systems and SafeNet to co-develop a new Internet security product.*
+phenomenal adj.异常的；非凡的；现象级的
+*we could introduce a phenomenal product by working together.*
+prevention n.阻止；妨碍；预防
+*especially in host prevention systems.*
+vendor n. 小贩；卖主；供应商
+imply v.暗示；意味
+*We currently have a working relationship with a vendor doing similar protection system on Linux-based systems.This does not necessarily imply that we cannot work together with Security Systems.*
+specification n.规格，规范；
+brochure n.小册子；手册；指南
+*Please send me a roadmap of our product development, a business proposal with details of possible collaboration, and also full product details with technical specifications and brochure to start with.*
++ 169-172
+ballroom n.舞厅
+sharp adj.锋利的；灵敏的；尖刻的；骤变的
+*The change is in response to a  sharp rise in registrations last year.*
+within reason 在合理范围内
+*so it was felt that the higher fee would keep the number of registrants within reason.*
+postmark n.邮戳
+expedited adj.加速的；加急的
+*After June 15, an additonal fee of $40 will be applied for expedited registration.*
+non-refundable adj.不可退还的
+deposit  n.存款；押金。v.存储；堆积
+cancellation n.取消；撤销；作废；终止
+*And, as always, all registration fees include a non-refundable $50 deposit to protect against cancellation.*
+affix v.附加；粘贴；署名；n.附加物；词缀
+affix your signatrue 署上你的签名
+abide v.遵守；忍受；居住；逗留
+govern v.统治；治理；控制
+*By affixing your signatrue to the registration form, you agree to abide by these and all other terms governing the Southeast Regional Salesperson Conference, which can be found on the back of the form.*
+pertain v.关于；从属；适合
+*To detail the policies pertaining to conference attendance.*
+decades 数十年
++ 173-175
+flavor n.风味；味道；特色v.给。。。调味
+cereal n.谷物；麦片
+coconut cream  椰子奶油
+frenzy n.狂乱；狂暴；狂怒； v.使狂乱；使狂怒
+enthusiast  n.热心者；热衷于....的人
+*Sending Tasteemix  enthusiasts from Argentina to Zambia into buying frenzy.*
+major adj.主要的；较多的；成年的；大调的 n.主修课；成年人；少校；大调 v.主修
+grocery n.食品杂货店
+distrobutor n.经销商；分销商；配电盘
+confirm v.证实；确认；批准
+*All six major grocery distributors here in Mauritius confirmed that they had received a large supply of coconut cream Tasteemix shorly after the new product was introduced on 8 January.*
+campaign n.战役；运动；活动 v.参加战役；从事活动
+reminiscent adj.怀旧的；引人联想的
+wage n.工资；v.发动
+strawberry-cinnamon cereal  草莓肉桂麦片
+*HFIs current campaign is reminiscent of the one it waged four years ago when it introduced its strawberry-cinnamon cereal.*
+expectations will be met 期望将会得到满足
++ 176-80
+defective adj.优缺点的；有缺陷的；有毛病的；
+component  n.成分；部分；零件；adj.组成的；构成的
+decline v.下降；衰退；谢绝；婉拒 n.
+in spite of 不管；不顾；尽管
+*I recently took my cellphone which was clearly in need of repair to Opa Locka Repair Center where the defective components in the machine are repaired.To my surpise, my request for the repairs to be billed to your company was declined in spite of the fact that there are still tow years remaining in the coverage period.*
+reputation n.名声；名誉
+malfunction n.v. 故障；失灵
+*Howerver, should the product mailfunction within five years of the date of purchase due to a mechanical defect, we will cover the cost of repairs.*
++ 181-185
+assume v.假定；设想；呈现；承担
+washer n.洗衣机；洗碗工
+*So I assume that you still have washers at your store.*
++ 186-190
+compliment n.问候；恭维
+*I would like to give my compliments to all the instructors.*
+recipe n.食谱；烹饪法；处方；秘诀
+tailor v.裁剪；缝制；调整使适应 n.裁缝
+vegetarian n.素食者；食草动物 adj.素食者的；素菜的
+*Lesson can be tailored to include vegetarian recipes only.*
++ 191-195
+pastry n.糕点；馅饼皮
+bakery n.面包房
+*He will opening his own bakery within the coming months, where customers will be able to order custom pastries and cakes for parties and weddings.*
++ 196-200
+gallery n.画廊；美术馆
+encounter v.n. 遭遇；邂逅
+portray v.描写；描绘；饰演
+susseeding adj.以后的；随后的
+*Each susseeding gallery that visitors encounter will portary younger versions of the city up to present-day London.*
