--- a/修士/托业/笔记/国版1.md
+++ b/修士/托业/笔记/国版1.md
@@ -54,6 +54,48 @@ teller n.讲述者；点票员；出纳员
 narrow adj.狭窄的；狭小的 v.使狭小
 alley  n.小巷；胡同
 *Jackson is a narrow alley right across from Delaware Park near Hooper Street.*
++ 56-58
+atmosphere n.大气；大气层；氛围
+superb adj.极好的；
+*I read in the local paper last week that the food and atmosphere there are superb but the price is a bit on the steep side.*
++ 65-67
+ink n.墨水
+cartridges n.芯，囊；管；桶
+shelf n.架子
+*Excuse me, I need to replace the color ink in my printer, but I see only black ink catridges on the shelf. Do you have color cartrides?*
+coupon n.礼券；赠券；优惠券
++ 68-70
+stain v.沾污；
+shampoo b.洗涤剂
+*but there are a lot of stains. So Idecides to shampoo it.*
++ 71-73
+strike n.罢工
+*To call on a strike*
+elevator n.电梯
+proceed 继续做某事v
+toward 向，朝；对着
+*I ask everyone at this time to leave waht you are doing and proceed towrd the nearest exit out of the building.*
+pose v.造成；引起
+precaution n.预防措施
+immediate adj.立刻的；经济的
+evacuate v.撤离；疏散
+*This situation does not pose any immediate danger, but as a safety precaution, we are asking everone to evacuate the building.*
+staircase n.楼梯
+*but walk camly to the nearest staircase out of the building.*
++ 74-76
+passenger n.乘客；旅客
+*we ask that all passengers of this flight please proceed to the ticket sales desk so that we may better server you.*
++ 77-79
+benefit concert 公益音乐会
+*A benefit concert for the Blue Hills Animal Shelter will be held on Friday.*
++ 80-82
+foremost adj.重要的；领先的；最佳的
+scholar n.学者
+premier adj.首位的，首要的
+consultant n.咨询师
+*Dr.Shelton is the foremost scholar at the nations premier Environmental Science Department, and has worked as a consultant for the state of California.*
++ 83-85
+
 #### 阅读
 pavement      n 路面，人行道   cross the pavement
 sweep            n,v 清理，打扫        sweeping the steps 清扫阶梯
