--- a/日语/新标日/新标日下/十二单元/四十七课.md
+++ b/日语/新标日/新标日下/十二单元/四十七课.md
@@ -16,4 +16,31 @@
 木村　きむら
 黄　こう
 ご存知です　ごぞんじです
-#### 
+### 语法
+#### 1.敬语
+*常见敬语：尊他语、自谦语、礼貌语、郑重语、美化语*
+#### 2.尊他语
+*一般来说，用于对长辈、上级、关系疏远的人。  对自己的家人一般不使用*
+#### 3.动词【ら】れます
+*动词的被动形式也是一种尊他语、但是只改变动词 不改变原本据此成分的位置及助词*
+週先生は日本へ行きます。　　　週先生は日本へ行かれます
+今朝何時に起きられましたか？
+#### 4.お+【一类动词/二类动词（连用）】になります、 ご＋【三类动词的汉字部分】になります
+*去掉ます只剩下一个音节的词的话不能这么用*
+お食べになります。
+#### 5.お＋「一类动词/二类动词 连用」ください；ご+三类汉字部分+ください
+*只剩下一个音街的话不能用； きます・します不能用*
+お食べください。
+*这个语法表示劝说、请*
+お座りください。
+エレーベータをご利用ください。
+こちらのドアからお入りください。
+#### 6.日语里，有一些特殊的尊他动词
+ご覧になる　　召し上がる　　いらっしゃる　　　なさる　　おっしゃる　　くださる　　ていらっしゃる　　てくださる
+見る　　　　　食べる　飲む　来る　いる　いく　する　　　言う　　　　　くれる　　　ている　　　　　　てくれる
+しっていますーご存知です
+まず、ホテルにチェックインなさいますか？　　なさる　する
+#### 表达
++ あっ、そう　　”ああ、そうですか”
++ ～じゃないか　　*比ね更强烈一点，上级对下级*
++ ～て　后续的敬语；   
