--- a/日语/新标日/新标日下/第九单元/三十四课.md
+++ b/日语/新标日/新标日下/第九单元/三十四课.md
@@ -93,7 +93,7 @@
 日本に留学するために、お金をためています。
 運動をするために、新しい靴を買いました。
 森さんは駅へ行くために、バスに乗りました。
-身体の健康のために、毎日野菜を食べまています。
+身体の健康のために、毎日野菜を食べています。
 #### 表达词语讲解
 + とっておき　　*珍藏的、特别....的*
 + うわあ
