--- a/日语/新标日/新标日下/第八单元/三十课.md
+++ b/日语/新标日/新标日下/第八单元/三十课.md
@@ -48,7 +48,7 @@
 *表示说话人的想法，和意志形一样，但比单纯的意志形更加礼貌温和。
 简体+と思います　是我认为。。。
 意志行+と思います　可以理解为我打算。。。*
-今日、会社を休むうと思います。
+今日、会社を休むと思います。
 もう遅いので、そろそろ帰ろうと思います。
 明日、会社へ行こうと思います。
 #### 3.动词（意志行）と思っています
