--- a/日语/错题集/N5-N4.md
+++ b/日语/错题集/N5-N4.md
@@ -23,3 +23,10 @@
 + 衣物和动词
 *ネクタイをします　　靴を履く　　帽子を被る　かぶる*
 
++ 基本型 ところです
+*表示 动作即将进行，正要~*
++ 动词 ているところです
+*表示动作的持续，正处于一个阶段*
+*~ているところです 一般不能前接非意志性动作*
++ 动词 たところです
+*表示动作或时间刚刚结束*
