--- a/英语/托业/笔记/国版1.md
+++ b/英语/托业/笔记/国版1.md
@@ -156,7 +156,7 @@ expenditure  n.开支；消耗；消费  （expend v.花费）
 department  n.部门
 *119. (Detailed) information about the department's expenditure is available in the monthly report.*
 reliable   adj.可靠的；可信的
-gasoline  n.汽油
+gasline  n.汽油
 *120. Speking of function,electric cars are (just) as reliable as the average gasoline powered vehicels.*
 recyclable  adj.可回收利用的；可再循环的
 trash can   垃圾桶
