--- a/日语/新标日/新标日中级上/第一单元/第一课.md
+++ b/日语/新标日/新标日中级上/第一单元/第一课.md
@@ -142,8 +142,9 @@ IT
 科目　かもく
 ### 会话语法
 #### 自动词与他动词
-日语中句子陈述的焦点往往落在主语上
-当存在相应的自动词他动词时，不能用无生命的物体充当主语
+自动：关注点在于事物本身 （东西掉下去了），在主语；自然发生的事情；助词用が
+他动：关注点在于掉落东西的人或这件事 （你东西掉了）；无生命物体不能当主语，应用他动；助词用を
+
 #### が＋助かりました
 ～がたすかりました、常用が来表示获得帮助的人
 ー＞天気がいいので、たすかりました。
