--- a/日语/错题集/N4-N3.md
+++ b/日语/错题集/N4-N3.md
@@ -12,3 +12,6 @@
 着る　特殊一类动词，きって
 
 大丈夫　更多用于回答询问或表示【没问题】【不需要担心】等意思，对于描述身体状态的情况，使用「健康」と「調子がいい」がいいです。
+
++ いくらの切符を買いたかったですか？
+这里的「買いたかった」是「買いたい」的过去式，“你之前想要买多少钱的车票？”
