--- a/英语/托业/笔记/国版3.md
+++ b/英语/托业/笔记/国版3.md
@@ -8,3 +8,104 @@ out of stock 缺货
 + part3
 mechanic n.技工；机械师；机修工
 *Plus, the mechanic that used to take care of my car doesnt work there anymore.*
+demonstration n.示范；演示；论证；示威
+*A printing demonstration.*
+pamphlet n.小册子
+*what was the problem with last year pamphlets?*
+expedite v.加速；加快；有助于
+*expedite a service.*
+fabric n.织物；布料；构造；（建筑物的）结构
+rush the service 加速服务
+*We have to use special cleaning products to make sure we don't damage the fabric.*
+outline n.v. 轮廓；纲要；描画轮廓；概述
+*Now I want to outline each of your specific fire response duties.*
+alternative adj.选择的 n.供替代的选择
+*Therefore, we see no alternative other than suspending our products and services to you.*
+slippry adj.滑的；狡猾的
+*Streets will get slippery quickly so please reduce your driving speed when you travel back home.*
+shovel n.铲子；铁锹 v.铲；铲起
+*And don't forget to bring a snow shovel.*
+apparel n.衣服；正装 v.装饰，给。。。穿衣服
+corner n.角；拐角；困境 v.拐弯；使陷入绝境
+*It's convenient downtown location is just around the corner from the Venture Street subway station.*
+diverse adj.多种多样的
+variety n.变化；多样性；不同种类
+appetizer n.开胃品
+entree n.主菜；入场许可
+*Our diverse menu has a variety of appetizers and entrees.*
+worsen v.恶化；损害
+sailing n.航海；划船运动；水运航班 v.航行
+*Due to worsening storm conditions, all of todays sailings have been canceled.*
+polish v.擦亮；磨光；润色；完善 n.光泽；上光剂
+*Make sure your shoes are polished.*
+uniform adj.一致的；n.制服
+consent n.v. 同意；允许
+personnel n.职员；全体人员；人事部
+*Altering your uniform without the consent of the personnel director is not allowed.*
++ part5
+accompany v.陪伴；伴随；为....伴奏
+stamp n.邮票；印迹；v.盖印；跺脚
+envelope n.信封
+*Your order can be processed more quickly when accompanied by a check for $20 and mailed in the envelope enclosed.*
+moist adj.潮湿的；湿润的
+*That kind of flower should be kept indoors and with moist soil.*
+enhance v.提高；增强
+*The new tracking system will enhance our company's ability to deliver packages on schedule.*
+sparing adj.节俭的；吝惜的；少量食用的 v.抽出；匀出
+well over  远远超出
+surpass v.超过；胜过；优于1
+*The total income surpassed our goal, reaching well over $2000, which is beyond our expectation.*
+lobby v.游说；n.大厅；休息室
+insulin n.胰岛素
+diabetes n.糖尿病；多尿症
+*The anti-GM lobby does not campaign against GM human insulin becase the benefits to people with diabetes are obvious.*
+logistic adj.后勤的；物流的
+depot adj.仓库；库房；车站
+multiple adj.多种的；多样的；n.倍数
+constraint n.约束；限制；拘束
+propose v.提议；计划；求婚；举荐
+*In order to save logistic distribution costs, a multi-depots vehicle routing problem with multiple constraints was proposed.*
+elaborate adj.v. 精心制作（得）；详尽（得）
+penalize v.对....予以惩罚；使处于不利地位
+toll n.伤亡人数；通行费；钟声；损失 v.征收；敲钟
+investigation n.调查；研究
+investigate v.调查；研究
+*The driver was penalized for refusing to cooperate with the investigation.*
++ part6
+criticize v.批评；责备
+*I hope you will all join me in criticizing Dick on his fault.*
+eligible adj.有资格的；合格的；合意的
+*after carefully examining all the eligible candidates.*
++ part7
+proof n.证明；证据；检验 adj.防...的
+*that  proof of purchase is provided.*
+correlation n.相关；相互关系
+*there is strong correlation between an employee's happiness outside of the work environment and his or her ability to stay focoused and enthusiastic in the workplace.*
+secure adj.安全的；可靠的；稳固的；v.安全；担保；使获得
+rack n.架子；支架；齿条；破坏 v.折磨；使痛苦；放在架子上；累计
+*The bicycle racks are secure and cost nothing to use.*
+refrain v.克制；抑制；忍耐; n.副歌；叠句；经常重复的评价（抱怨）
+*Refrain from damaging the flower beds.*
+anticipate v.预料；预期；期望；抢先；提前使用
+launch n.v.发射；发起；投掷；启动
+*This may be the most anticipated product launch.*
+retail n.v.零售
+outlet n.出口；发泄途径；经销店；折扣店
+*visiting a retail outlet where K-star products are sold.*
+administrative adj.管理的；行政的；
+sufficient adj.足够的；充足的
+advancement n.提升；晋升
+*The investigation sought to determine whether administrative workers have sufficient career advancement opportunities and whether the currnt set of leadership training course meets the needs of supervisors.*
+portion n.部分；一小份v.分配
+televise v.由电视播送；用电视放映
+race n.种族；赛跑；竞争；v.比赛；快速移动
+*Portions of the race will be televised.*
+chain n.链子；链条 v.用铁链锁住
+*A hotel chain.  连锁酒店*
+compass n.罗盘；指南针
+*position with reference to compass.   参考指南针的位置*
+evaluation n.评估；评价；估价
+*Evaluation report*
+illustrate v.（举例）说明；给（书籍、杂志等）加插图
+affair n.事件；事务；暧昧关系
+*The responses of Human Resources directors illustrate the current state of affairs,*
