--- a/个人简历/个人简历.md
+++ b/个人简历/个人简历.md
@@ -11,8 +11,8 @@
 + X:https://x.com/Khynpe50k02pwCt
 ### 语言：
 + 中文：母语
-+ English:fluent
-+ 日本語：今勉強します、Ｎ５可能
++ English: TOEIC 775
++ 日本語：N3
 ### 技术栈
 + 编程语言：Go，Python，C，php
 + 技术：熟悉常用数据结构与算法，go语言服务端开发技术栈
