--- a/日语/新标日/新标日中级上/第一单元/第一课.md
+++ b/日语/新标日/新标日中级上/第一单元/第一课.md
@@ -142,92 +142,92 @@ IT
 科目　かもく
 ### 会话语法
 #### 自动词与他动词
-自动：关注点在于事物本身 （东西掉下去了），在主语；自然发生的事情；助词用が
-他动：关注点在于掉落东西的人或这件事 （你东西掉了）；无生命物体不能当主语，应用他动；助词用を
+*自动：关注点在于事物本身 （东西掉下去了），在主语；自然发生的事情；助词用が
+他动：关注点在于掉落东西的人或这件事 （你东西掉了）；无生命物体不能当主语，应用他动；助词用を*
 
 #### が＋助かりました
-～がたすかりました、常用が来表示获得帮助的人
+*～がたすかりました、常用が来表示获得帮助的人*
 ー＞天気がいいので、たすかりました。
 ー＞仕事を手伝えば、お父さんが助かります。
 
-感謝の意味を表現することもできます。
+*感謝の意味を表現することもできます。*
 ー＞荷物を持っていただいて、たすかりました。
 #### 感じます・感がじする
-感じます　　　　　多表示直接感受
-感じがします　　    多表示留有某种印象
+*感じます　　　　　多表示直接感受*
+*感じがします　　    多表示留有某种印象*
 ー＞勉強すればするほど、難しくなる感じがします
 ー＞北京の町並みがすっかり変わってしまって、不思議な感じがします
 ー＞この景色を見ると、日本に来たという感じがします
 #### は 与其他助词的组合
-は　表示主题、添加对比意义
-が、を＋は　＝　は
-へ＋は　へ可省略可不省略
-に・で・と・から・より＋は　直接加は
+*は　表示主题、添加对比意义*
+*が、を＋は　＝　は*
+*へ＋は　へ可省略可不省略*
+*に・で・と・から・より＋は　直接加は*
 ー＞が＋は　この駅の駅弁はおい石井です
 ー＞を＋は　お酒は飲みあせん
 ー＞へ＋は　京都へは行きませんでした。
 ー＞とは　　李さんとはどこで待ち合わせましたか？
 ー＞からは　外からは中に誰がいるのかわかりません。
 #### になります
-表示不是出于本人意愿，由于他人的推动或命令才变成那样的
+*表示不是出于本人意愿，由于他人的推动或命令才变成那样的*
 ー＞ええ、こちらに転勤になったんです。
 #### すっかり・ずいぶん
-すっかり用于整体性的变化，不能表示动作的量
-ずいぶん表示一定量的变化，80~90%
+*すっかり用于整体性的变化，不能表示动作的量*
+*ずいぶん表示一定量的变化，80~90%*
 ー＞陳さんの病気はすっかり良くなりました。　　100%痊愈了
 ー＞陳さんの病気はずいぶん良くなりました。　　好了80-90%，好多了
 #### ついていけない
-ついていくーついていけるーついていけない
-表示“跟不上脚步”，引申为难以有相同的想法和行动
+*ついていくーついていけるーついていけない*
+*表示“跟不上脚步”，引申为难以有相同的想法和行动*
 ー＞変化が早くて、私達もついていけないくらいです。
 ー＞あの人の考え方にはついていけません。
 #### ～くらいです
-强调程度，常用语表达某事达到了某个极端
+*强调程度，常用语表达某事达到了某个极端*
 ー＞変化が早くて、私達もついていかないくらいです。
 ー＞この辺は、静かすぎて寂しいくらいです。
 ー＞財布を忘れましたが、ジュースを買うくらいのお金は持っています。
 
-～ほど　和くらい意思大致相同，ほど多用于书面语，而くらい多用于口语
+*～ほど　和くらい意思大致相同，ほど多用于书面语，而くらい多用于口语*
 #### ～てきました
-表示变化的开始，或不断朝着某个结果进展的状态
+*表示变化的开始，或不断朝着某个结果进展的状态*
 ー＞日本語の発音に少し慣れてきました。
 
-相比于た形，た是结果，てきました重点在于变化  “越来越”
+*相比于た形，た是结果，てきました重点在于变化  “越来越”*
 ー＞ほら、高層ビルが見えてきたでしょう？
 ー＞高層ビルが見えたでしょう？
 ### 课文语法
 #### ～とは
-~とは　是 　というのは　得省略，用于提出某个名称，并进行说明或询问；或者下定义，表现形式为“～とは～のことです”
+*~とは　是 　というのは　得省略，用于提出某个名称，并进行说明或询问；或者下定义，表现形式为“～とは～のことです”*
 ー＞ＪＲとは、ジャパンレールウェイズの略です。
 ー＞おせち料理とは、正月に食べるお祝いの料理のことです。
 
-というものは前接名词，说明事物的本质特征
+*というものは前接名词，说明事物的本质特征*
 ー＞幸運というものは、いつ訪れるかわかりません。
-ということは前接动词，说明行为的本质或性质特征
+*ということは前接动词，说明行为的本质或性质特征*
 ー＞一人で生活するということは、大変なことです。
-前接小句，表示推测事情发生的原因或归纳符合逻辑的结果
+*前接小句，表示推测事情发生的原因或归纳符合逻辑的结果*
 ー＞彼が怒ったということは、きっとひどいことを言われたのでしょう。
 ー＞車に五人しか乗れないということは、誰かがバスで行けなければならないということです。
 #### ~は～の1つです
-表示A是B范围当中的一种
+*表示A是B范围当中的一种*
 ー＞日本はアジアの国の一つでう。
 #### 結ぶ　むすぶ
-意为结绳，也可以表示抽象的链接关系、使用“むすんでいます”得形式表示状态。
+*意为结绳，也可以表示抽象的链接关系、使用“むすんでいます”得形式表示状态。*
 ー＞化石は、古い時代と現代を結んでいます。
 #### 大～
-大的读法有 おお　たい　だい。 だい后续词一般为两个字的汉语词，たい一般为词语的一部分，おお后续一般为日语固有的词
+*大的读法有 おお　たい　だい。 だい后续词一般为两个字的汉语词，たい一般为词语的一部分，おお后续一般为日语固有的词*
 ー＞大都市には大きな私鉄がたくさんあります。
 ー＞大感激です
 #### また
-また表示并列，常用于句首，在后面添加新的内容或观点
+*また表示并列，常用于句首，在后面添加新的内容或观点*
 #### もの
-もの可以用来代替前文出现过的名词，在句尾接です不能用の代替（因为和のです无法区分），其他情况可以用の代替。
+*もの可以用来代替前文出现过的名词，在句尾接です不能用の代替（因为和のです无法区分），其他情况可以用の代替。*
 ー＞公営の鉄道は、地方自治体などが経営するものです。　　ものー＞の　X
 ー＞この資料は昨日お送りしたもの（の）と同じです。
 #### そこで
-そこで用来补充某种场景或状况出现之后产生的情况。それで表示前述内容是后续内容的原因或利用，而そこで表示出现了某事或某种情况，陈述与该状况密切相关的事情。
+*そこで用来补充某种场景或状况出现之后产生的情况。それで表示前述内容是后续内容的原因或利用，而そこで表示出现了某事或某种情况，陈述与该状况密切相关的事情。*
 ー＞道がわからなくて困りました。そこで、近くにいた人に教えてもらいました。
 ー＞東京に向かう路線を「上り」、地方に向かう路線を「くだり」といいます。それで、こんななぞなぞができました。
 #### こんな
-このような 比较随便的说法，通常用于指示前述词语或内容。
+*このような 比较随便的说法，通常用于指示前述词语或内容。*
 ー＞これは秘密だけと、大川さんは昨日会社を休んでコンサートへ行ったらしいです。　　　*这件事不要告诉别人*
