--- a/日语/新标日/新标日中级上/第一单元/第二课.md
+++ b/日语/新标日/新标日中级上/第一单元/第二课.md
@@ -99,86 +99,86 @@
 ～万
 ### 会话语法
 #### ~ぶり
-表示离再次发生同样的事情的时间比较长，具有感叹语气，>=2日。
-时间比较久可以用 ”久しぶり”
-修饰动词：～ぶりに＋动词
-修饰名词：～ぶりの＋名词
+*表示离再次发生同样的事情的时间比较长，具有感叹语气，>=2日。*
+*时间比较久可以用 ”久しぶり”*
+*修饰动词：～ぶりに＋动词*
+*修饰名词：～ぶりの＋名词*
 ー＞佐藤さんといっしょに仕事をするのは、四年ぶりですね。
 ー＞三ヶ月ぶりに、東京へ来ました。
 ー＞十年ぶりの寒さで、湖が凍りました。
 #### ~ものです
-表示感叹的用法，对事物的性质或变化很吃惊。接”～ほしい”、”～たい”时表示对愿望的强调。
+*表示感叹的用法，对事物的性质或变化很吃惊。接”～ほしい”、”～たい”时表示对愿望的强调。*
 二类形＋なもの
 ー＞早いものですね。
 ー＞一人でよく帰ってこられたものです。
 ー＞平和な世界になってほしいものです。
 ー＞休暇が取れたから、ゆっくり旅行したいものです。
 #### ~こちらにお願いします
-与各种各样的词搭配，可以用来代替具体的动词
+*与各种各样的词搭配，可以用来代替具体的动词*
 ー＞コーヒーをお願いします
 ー＞サインをお願いします
 #### 今度
- 可以表示 下次、下回；这次 这回；最近
+ *可以表示 下次、下回；这次 这回；最近*
  ー＞今度ぜひ私の家に遊びに来てください。
 ### 课文语法
 #### 1.~よりも
-比较对象的助词　より　长接续も，意义不变，但是比较的语气更加强一点
+*比较对象的助词　より　长接续も，意义不变，但是比较的语气更加强一点*
 ー＞日本人は、握手よりもお辞儀をするのが一般的です。
 ー＞私はズポンよりもスカートのほうが好きです。
 
-より还有时间起点的用法
+*より还有时间起点的用法*
 ー＞会議は三時より始めます
 #### ~て～
-口语中事件先手顺序叙述时常用“～て～”、但是书面语一般不这么用，书面语用动词去掉"ます”形式连接
-但是当两个动作同时发生或前一个动词修饰后一个动词的时候一般不能改为 去”ます”的连用形
+*口语中事件先手顺序叙述时常用“～て～”、但是书面语一般不这么用，书面语用动词去掉"ます”形式连接*
+*但是当两个动作同时发生或前一个动词修饰后一个动词的时候一般不能改为 去”ます”的连用形*
 ー＞まずここにお金を入れ、次に一のボタンを押し、最後に二のボタンを押します。
 #### ~ほうが～です
-“小句（简体形）+より＋小句（简体形）+ほうがいいです（方が良いでしょう）
-如果简体形为动词，使用た形表示建议的语气比较强烈，而用基本型则表示一般的看法。
+*“小句（简体形）+より＋小句（简体形）+ほうがいいです（方が良いでしょう）*
+*如果简体形为动词，使用た形表示建议的语气比较强烈，而用基本型则表示一般的看法。*
 ー＞食事は（一人で食べるより）大勢で食べるほうが楽しいです。
 ー＞特に仕事の場で会った相手には、個人的な質問は避けたほうがいいでしょう。
 #### 年　とし　歳（とし）
-口语一般将「年齢」称为「年」、日语汉字也会写作「年」
+*口语一般将「年齢」称为「年」、日语汉字也会写作「年」*
 ー＞結婚しているかどうか、給料はいくらか、年はいくつかなどは普通は聞きません。
 
-年を取ります（上年纪了）
-年寄り（老年人）
+*年を取ります（上年纪了）*
+*年寄り（老年人）*
 ー＞母は最近年を取って、目が悪くなりました。
 ー＞お年寄りには席を譲りましょう。
 #### いくら～ても～
-动词て形，相当于“无论如何努力做A，但即使那样还是B“。
-同样意思的表达还有 ”いかにAてもＢ”（比较正式），”どんなにAてもB“，”誰だけAてもＢ”
+*动词て形，相当于“无论如何努力做A，但即使那样还是B“。*
+*同样意思的表达还有 ”いかにAてもＢ”（比较正式），”どんなにAてもB“，”誰だけAてもＢ”*
 ー＞この店ではいくら料理を食べても、千円です。
 ー＞どんなに遅くなっても大丈夫です。
 ー＞いかにフランス語がうまくても、フランス人には及びません。
 ー＞誰だけ考えても、いい案が見つかりません。
 #### 怖い顔をして
-”表情形容词+顔する”是表示面部表情的表达方式，也可以和表达情感的动词一起使用
+*”表情形容词+顔する”是表示面部表情的表达方式，也可以和表达情感的动词一起使用*
 ー＞びっくりしたような顔をしました。
 #### ~ては・では
-表现出不良情况A，就会出现B的情况或状态。
-接续方式：动词ては、形容词ては、名词では；会话中ては会说成ちゃ（あ）、では会说成じゃ（あ）
+*表现出不良情况A，就会出现B的情况或状态。*
+*接续方式：动词ては、形容词ては、名词では；会话中ては会说成ちゃ（あ）、では会说成じゃ（あ）*
 #### 気持ちがこもっています
-“こもります”　充满而不外露，还可以用 「思い」「真心」；衔接
-こめます　他动词
+*“こもります”　充满而不外露，还可以用 「思い」「真心」；衔接*
+*こめます　他动词*
 ー＞手作りのお弁当にはお母さんの真心がこもっていますよ
 ー＞彼らは結婚の祝のきもちをこめてうたをうたいます。
 ー＞遠く離れた家族への思いをこめて、手紙を書きました。
 #### 以上に
-动词基本型+以上に・名词+以上に
-具有比较意义，表示超出了事物的量或范围，是比较正式的表达。
-前接动词基本型（非た形）时主句不能是过去形式。
+*动词基本型+以上に・名词+以上に*
+*具有比较意义，表示超出了事物的量或范围，是比较正式的表达。*
+*前接动词基本型（非た形）时主句不能是过去形式。*
 ー＞私達が予想する以上に人が集まりました。　　×
 ー＞私達が予想した以上に人が集まりました。
 #### ~ものです　（表示性质）
-A具有B的性质。
-表示本质时否定形式为”～ない＋ものです”；
-表示理所当然时为”～ものではありません”、”～ものではないです”、在口语中也会用“~もんじゃないです”的形式
+*A具有B的性质。*
+*表示本质时否定形式为”～ない＋ものです”；*
+*表示理所当然时为”～ものではありません”、”～ものではないです”、在口语中也会用“~もんじゃないです”的形式*
 ー＞人の心はわからないものです。
 ー＞約束の時間に遅くれるときは、相手に連絡するものです。　（理所当然）
 ー＞そんな失礼な事を言うものではありません。
 
-たものです　可以用来表示回顾过去
+*たものです　可以用来表示回顾过去*
 ー＞時間の経つのは早いものですね。
 ー＞赤ん坊はよく泣くものです。
 ー＞子供の時、よく川で遊んだものです。
