--- a/英语/单词笔记.md
+++ b/英语/单词笔记.md
@@ -6,3 +6,7 @@ outshine v.胜过；比。。。更出色
 precise adj.准确的；精确到
 adaptive adj.适应的；有适应性的
 *OutWit, Outplay, and outshine your competition with tactical abilities, precise gunplay, and adaptive teamwork.*
+
+envelope 信封
+*I want youy to have this seoled envelope.*
+carpenter n.木匠；木工
