--- a/日语/刷题/16年7月N2.md
+++ b/日语/刷题/16年7月N2.md
@@ -1,7 +1,433 @@
-治療　ちりょう
+ 治療　ちりょう
 歯医者　はいしゃ
 虫歯　むしば
 *歯医者に行って虫歯の治療を受けた*
 競う　きそう
 たび　时候、回数、次、回
 *私たちはテストのたびに学年でトップを競っていた*
+批評　ひひょう
+疲弊　ひへい　疲惫
+掲載　けいさい　刊登；登载
+*今月の雑誌に新しい映画の批評が掲載された*
+納める　おさめる　缴纳；接受；收藏；奉献给神佛，结束
+期日　きじつ
+*期日までに入学金を納め*
+症状　しょうじょう
+*診察室で医者に「症状」を伝えた*
+率直　そっちょく　直爽的
+安易　あんい　轻易的；容易的
+短気　たんき　没耐心的
+*その話が本当かどうかわからないのに、確認もしないで「安易に」信じてしまった。*
+直に　じかに　　直接、理科、马上
+*このことは本人に「じかに」伝えてください。*
+ぶつかる　碰，撞；冲突；争吵
+衝突　しょうとつ
+*もう少しで衝突するところだった*
+生じる　しょうじる　*生长，事情发生，产生--得效果*
+沿って　そって　
+
+済む｜すむ①
+1. 完（了），终了，结束（ことが終わる。）
+2. （问题）解决，（事情）了结（解決する。）
+3. 过得去，没问题；足够（ことが足りる。）
+4. （良心上）过得去，对得起（申し訳がたつ。）
+
+関する｜かんする③
+自动·サ变
+1. 有关；关于
+2. かかわる。
+
+すでに｜すでに①
+副词
+1. 已经
+
+締め切り日｜しめきりび④
+名
+1. 截止日期
+
+回答｜かいとう⓪
+名·サ变
+1. 回答，答复
+2. 返事、答え。
+3. 質問・要求などに答えること。
+4. 回答，答复
+
+中旬｜ちゅうじゅん⓪
+名·副词
+1. 中旬
+2. 月の中の10日。11日から20日までの10日間
+
+プロ｜ぷろ①　　pro
+名
+1. professional职业
+2. 玄人；専門的。
+
+認め｜みとめ⓪
+名
+1. 承认，赏识
+2. 認めること。
+
+一喜一憂｜いっきいちゆう①
+名
+1. 一喜一忧
+2. 状況が変わるたびに、喜んだり心配したりすること。
+
+獲得｜かくとく⓪
+名·他动·サ变
+1. 获得取得争取
+2. 手に入れること。得ること
+
+送料｜そうりょう①③
+名
+1. 邮费；运费
+2. 送り賃。
+
+従い｜したがい
+名
+1. 遵从
+2. 自分より強大なもの、不動・不変なものの権威や存在を認め、自分の行動をそれに合わせること。
+
+争い｜あらそい⓪③
+名
+1. 争，争论，争吵，纠纷，不和
+2. 争うこと。いさかい。闘争。けんか。
+3. 竞争
+4. 競争。
+
+述べる｜のべる②
+他动·一段
+1. 叙述；陈述；说明；申诉；阐明
+2. 順を追って言葉で言い表す。また、書き記す。
+
+物語｜ものがたり③
+名
+1. 故事
+2. 話し語ること。また、その内容。よもやまばなし。談話。
+3. 传说
+
+やり方｜やりかた⓪
+名
+1. しかた。方法。するときの態度(たいど)。
+2. 做法，方法。做某事时的态度
+
+必然｜ひつぜん⓪
+名
+1. 必然
+2. 必ずそうなること。
+
+役割｜やくわり⓪③
+名
+1. 任务，职务，作用分派的职务。
+2. 役目を割り当てること。また、割り当てられた役目。
+3. 角色，社会性作用。
+
+計る｜はかる②
+他动·五段
+1. 测定，测量计量物体的长度、数量、重量等
+2. 物の長さ・量・重さなどを調べる。測定する。計測する。
+3. 推测，揣测，揣摩心中推定，想象
+4. 心の中で推定する。想像する。おしはかる。
+5. 推测，推断，预测
+6. 予測する。
+
+ぬるま湯｜ぬるまゆ③
+名
+1. 温水，微温的水；安于现状，阿Q精神
+
+罰則｜ばっそく⓪
+名
+1. 罚规规定对违法行为要处以刑罚、罚款的法律上的规定
+2. 違法行為に対して、刑罰・過料を科することを定める法律の規定。
+
+ひたすら｜ひたすら⓪
+副词·形动
+1. 只顾，一味
+2. ただその事だけに心が向かうさま。いちず。ひたぶる。
+3. 一心一意，一个劲儿
+4. ひとすじに。いちずに
+
+ネジ｜ねじ①
+名
+1. 螺丝，螺钉
+
+
+プライド｜ぷらいど⓪
+名
+1. pride自尊心，自豪感
+2. 誇り。自尊心。自負心
+
+まね 模拟　真似
+
+うきうき｜うきうき①
+副词
+1. 高高兴兴地
+
+流行っている　はや
+
+
+### 文法
+*1.名詞+についで：接着，次于……*
+
+*〜にしては*。前接体言、用言连体形。以一般常识、标准为前提，叙述实际情况与之相反的情况。
+
+1.なんて：名词+なんて。举例，语气减轻或委婉表达时使用；没什么了不起，轻视或否定时使用。
+*2.だって：类似于でも，即便是……也。 补充说明*
+3.のほかにも：表示“除此之外，还……”
+4.のぼうが：表示比较的句型。“…一方…”，在句子里我们经常不直接翻译出来。
+
+1.参る：来(去)。自谦语。
+2.伺う： 听说、拜访。自谦语。
+*3.おありです：有。动词原形ある。*
+*4.おいでになる：出席，驾临。「行く」「来る」「居る」的尊他敬语。*
+
+*1.わけだ：由于……那当然……*
+
+本题考査：动词ます形+かねる：很难…
+选项1，动词原形+べき：表示应该
+*选项2，动词ます形+かねる：表示很难…*
+选项3，动词にすぎない：表示只不过
+*选项4，动词未然型+ざるを得ない：表示不得不*
+
+本题考查：动词ます形+っこない：不可能…
+选项1，动词ます形+ように：表示愿望，希豊・•，希望中奖.
+*选项2，用言连体型+くせに：表示转折。明明•••…却……*
+选项3，といい：表示如果…就好啦
+选项4，动词ます形+っこない：表示不可能…
+
+本题考查：人/物+に対（たい）して：表示对某人或物的态度等。
+
+*本题考查：前句+としたら：表示如果(假设条件)*
+
+本题考查：动词ようにしてほしい：表示说话人的愿望，希望对方做某事。
+选项2，ようになりたい表示想要变成…
+
+**ことはない**：表示“不会发生某事”或“不可能”，用于强调某件事情基本不会发生。这句中是指“几乎不会失败”。
+**まず**：在此处是“基本上”或“几乎”的意思，加强语气。**ことはまずない**整体的意思是“几乎不可能发生”或“几乎不会失败”。
+
+要点：「ついでに」：表示顺便的意思。
+
+からだ：から表原因
+のだろう：表推测
+こともある：也有这种能性
+ほどだ：表程度
+
+“にしています”表示某种习惯、决心或安排
+
+“とはいえない”是“不能称作……”的意思，表示从某个角度看，某事物不符合该定义或标准。
+
+**ので**：表示原因或理由，相当于中文的“因为”或“所以”，用来解释前面的结论。
+
+**において**：表示“在……的情况下、在……的条件下”。它用于指示某个特定的场景或状态。
+
+### 听力
+拝見｜はいけん⓪
+名
+1. （「見る」的自谦语）拜读；瞻仰，看（文などを読む）（あおぎ見る。）
+
+**していただく** 是“する”（做）和“いただく”（得到、接受）的结合体。这个结构表示请求对方为自己做某事，语气比较客气和谦逊。在这种上下文中，表示请求对方帮忙修改资料。
+
+添付｜てんぷ①⓪
+名
+1. 添上；付上（添え付ける。）
+*間違って修正前のファイルを添付してしまったんだと思います*
+
+直ちに｜ただちに①
+副词
+1. 立刻，立即，当即，即刻，立时；马上（すぐに；~を伴って時間の短いことを強調する）
+2. 直接（直接に）
+*はい、直ちに。*
+
+改め｜あらため③
+名
+1. 审查；盘查（検査）
+2. 改变，变革（新しくすること。）
+*次回以降の打ち合わせの日程については、資料を確認したあと、改めてご相談させてください。*
+
+オフィス｜おふぃす①
+名
+1. office办公室；办事处；事务所；营业所
+2. 公司（会社）
+係長｜かかりちょう③
+名
+1. 股长（官庁・会社などでの役職の一。その部署の係員の長で、普通は課長の下の地位。）
+*オフィスで係長が話しています*
+
+新た｜あらた①
+形动
+1. 新（新しいさま。今までにないさま）
+2. 重新（改めて行うさま。今までの状態を改めて，新しくするさま）
+3. 生动，新鲜（いきいきとして，古びないさま）
+*社員はこのあと新たに何をしなければなりませんか。*   あらたに表示与之前不同（改正、重新、增加）
+
+取り組んでくれていますか？     着手去做了吗？
+
+ダンボール箱｜ダンボールばこ ⑤
+名
+1. 纸箱子
+*えー、今は使わない昔の書類ですが、ダンボール箱に入ったままになっていますね。 *
+
+ごとに　分割时间
+*年度ごとにファイルにまとめるなどしておいてください。*
+
+たな  柜子、隔板
+ラベル｜らべる①
+1. 标签，签条
+*あっ、ファイルといえば、たなの中のものは、ラベルが付いて整理され、見違えるようになりましたね。*
+
+コンクール｜こんくーる③
+名
+1. concours竞赛会，竞演会，会（汇）演
+2. 音楽や美術などの競技会。
+乏しい｜とぼしい③
+形
+1. 缺乏，不足，缺少
+2. たりない。
+3. 乏，贫困
+4. まずしい。
+*今コンクールに向けて練習をしているんですけど、生徒たちの声、今ひとつ表現力が乏しくて。*
+
+見直し｜みなおし⓪
+名
+1. 重看，重新评估，重新修改（もう一度改めて見ること）
+*うん、そういう時は、曲全体を見直したほうがいいんじゃないかな。*
+
+深い｜ふかい②
+形
+1. （深度）深的
+2. 底・奥までの距離が長い。
+3. 浓厚，（颜色）深的
+4. 濃い。濃度が大きい。
+5. 深
+*いや、みんなで歌詞を読んで、意味を深く理解する時間を取るっていう意味ですよ。*
+
+捉える｜とらえる③
+他动·一段
+1. 捉住，抓住，逮捕，逮住
+2. 逃げる人や動物をつかまえる。
+3. 紧抓住，揪住
+
+
+早速｜さっそく⓪
+副词
+1. 立刻，马上；迅速，火速；赶紧（時間をおかないで、すぐに。すみやかなこと。また、そのさま。ただちに。）
+*ありがとうございます。早速やってみます。*
+
+伺う｜うかがう⓪
+他动·五段
+1. 请教，打听「聞く·たずねる·問う」的谦让语
+2. 「聞く」「尋ねる」「問う」の謙譲語。また、目上の人の話などを聞く。拝聴する。
+3. 拜访，访问
+4. 自動詞として「訪問する」の謙譲語。
+
+伸びのある声｜のびのあるこえ⓪
+惯用
+1. 有穿透力的声音
+*大きく伸びのある声を出すには体の強さも必要だから。 
+因为如果要唱出有穿透力的声音，强壮的身体也是必要的。*
+
+シンポジウム｜しんぽじうむ④
+名
+1. 讨论会
+
+配る｜くばる②
+他动·五段
+1. 分配，分给，分送
+2. 分配する割りあてて渡す
+*い。配る資料は、すべて印刷が終わっています。*
+
+運ぶ｜はこぶ⓪
+自他动·五段
+1. 运送，搬运
+*では早速会場に運んでください。*
+
+枯れる｜かれる⓪
+动
+1. 凋零，枯萎，枯死（草木が死ぬ。）
+2. 干燥（よく乾いた。）
+3. 成熟，老练，圆熟（円熟して深みがでる。）
+4. 枯瘦，干瘪，干巴，衰萎（やせ衰える。）
+根｜ね①  
+名
+1. 根
+2. 植物の。
+3. 根底
+腐｜くされ
+名
+1. 腐敗する、だめになる、悪くなる。
+2. 腐败、糟无线、变坏。
+*枯れる原因でまず考えられるのは、水のやりすぎによって、【根が腐ってしまうことですけど。】*
+
+べランダ  阳台
+常に｜つねに①
+副词
+1. 常，时常，经常；不断；总，老（いつも。ふだん。たえず。永久に。必ず。）
+*日当たりのいいべランダに常に置くようにしていたんですけど。*
+
+好む｜このむ②
+他动·五段
+1. 喜欢，称心如意，热爱
+2. 興味を持つ。気に入って味わい楽しむ。
+3. 希望，欲望
+4. えらび望む。所望する。
+浴びる｜あびる⓪
+他动·一段
+1. 浇；淋，浴
+2. 水をかぶる。
+3. 照，晒；满身受到
+4. 太陽やほこりなどを受ける。
+5. 受，蒙，遭
+6. こうむる。
+*この木は暖かい場所を好むんですが、直接日光を長く浴びてしまうと、枯れてしまうこともあるんですよ。*
+
+枝｜えだ⓪
+名
+1. 树枝（樹木等の幹から分かれ出た部分。）
+2. 分支（分かれ出たもの。）
+*どんどん枝が伸びてくるので*
+
+パスタ｜ぱすた①
+名
+1. pasta意大利面食（类）
+2. イタリア料理に使う、小麦粉を水や卵で練った食品の総称。スパゲッティ・マカロニなど。また、その料理。
+*会社の前にできた新しいパスタの店に行ってきたよ。*
+
+あっさり｜あっさり③
+副词
+1. 朴素，不花哨；（口味）清淡；（性格）坦率，淡泊
+2. 濃かったり、くどかったり、しつこかったりせず、さっぱりとしたさま。淡泊なさま。
+3. 简单，轻易，轻松
+4. 簡単にするようす。
+*うん、あっさりした味付けで、素材の味を生かした上品な料理が多かったよ。*
+
+妥当｜だとう⓪
+名形动
+1. 妥当；妥善（正しい。てきせつ。）
+*まあ、あの味なら、値段も妥当かな。*
+
+覗く｜のぞく⓪
+自他动·五段
+1. 露出
+2. 一部分がちらりと見える。
+3. 窥视，探视
+*外から覗いただけだけど、色使いが独特だよね。*
+
+落ち着く｜おちつく⓪
+动
+1. 沉着；镇静；稳重；安定，安静，消停，平心静气；安详（鎮まる。）
+2. 平静下来，稳定，平息（安定する。）
+3. 长期居住，定居，落户；安顿下，落脚；久住，久居（居所・職業がきまって居つく。長くとどまる。）
+4. 有头绪，有眉目，有着落（まとまる。）
+5. 素净，朴素，不花哨，不刺眼（色・音・模様などが地味でしっとりしている。）
+6. 稳坐，坐得稳，稳当（言動が軽率でない。沈着である。）
+7. 谐调，调和，匀称（つりあう。）
+*うん、雰囲気を出そうとしているのはわかるんだけど、実際中に入ってみると、ちょっと派手すぎて、落ち着かないんだ*
+
+*来月になってからでないと* 直到下个月
+**でないと**：这个部分是一个常见的表达形式，意为“如果不……就不行”，带有条件的意味。它通常用于表示某个条件必须满足，才可以发生其他事情。**「でないと」是「ないと」的口语形式，表示“如果不……的话”。
+から**：这里的“から”表示时间的起点，也就是“从……开始”的意思。它说明动作或事件的起点是在“来月”，即“从下个月开始”。
+
+*文句の付けようがなかったね。*    没有什么可以批评的地方
+**文句（もんく）**：意思是“抱怨”或者“批评”，在这里指的是对某件事不满或想提出的意见。
+**の**：这个「の」是连接词，用来表示解释或说明，起到名词化的作用。这里的“文句の”相当于“对某事的抱怨”。
+**付けよう（つけよう）**：这是动词“付ける”（加上、附加）的意向形，表示“想要做某事”的意思。在这里，意指“想要附加”或“想要提出”的意思。所以，“付けよう”可以理解为“想要提出抱怨”或者“想要批评”。
+*想要批评都没有办法。    没有什么可以批评的地方*
