--- a/日语/刷题/16年7月N2.md
+++ b/日语/刷题/16年7月N2.md
@@ -177,7 +177,7 @@
 
 1.参る：来(去)。自谦语。
 2.伺う： 听说、拜访。自谦语。
-*3.おありです：有。动词原形ある。*
+*3.おりです：有。动词原形ある。*
 *4.おいでになる：出席，驾临。「行く」「来る」「居る」的尊他敬语。*
 
 *1.わけだ：由于……那当然……*
