--- a/日语/刷题/23年12月N3.md
+++ b/日语/刷题/23年12月N3.md
@@ -1,18 +1,18 @@
 ### 単語
 クイズ　　　*谜题*
 ヒント          *hint 暗示*
-ベランダ       
+ベランダ       　阳台
 おたがいに　　２１
 ２５
-だるい
-まぶしい
-ぬるい
-にがい
+だるい　　　怠い
+まぶしい　　眩しい
+ぬるい　　温い
+にがい　　苦い
 ３３
 取り消す　
-３４
-共通
-詰める
+３４　
+共通　　　共通
+詰める　　
 ３　２０
 そのうえ
 珍しい　めずらしい
