--- a/日语/新标日/新标日中级上/第一单元/第四课.md
+++ b/日语/新标日/新标日中级上/第一单元/第四课.md
@@ -74,7 +74,7 @@
 #### 当たり前
 *名词，表示某事并不特别，很普通；通常的用法是“是常有的事”、“当然，用不着说”，但不能用于句首。*
 ー＞残業や休日出勤するのは当たり前でした。
-#### 取り組み　とりきみ
+#### 取り組み　とりくみ
 *1.解决；认证对付（措施）*
 ー＞災害の取り組み　 灾害的防治政策
 *2.搭配；配合。*
