--- a/个人简历/个人简历.md
+++ b/个人简历/个人简历.md
@@ -35,6 +35,9 @@
 	+ RHCE认证，id:200-161-131；
 	+ 绩点：2.72
 	+ 加权平均分：77.2
++ CS Learning
+	+ MIT 18.01
+		+ begin: 2024.12.10
 ### 工作经验
 + 2022.07~2024.1.19 北京星制科技（昆仑天工）
 	+ Golang服务端工程师
