--- a/修士/时间计划.md
+++ b/修士/时间计划.md
@@ -1,5 +1,56 @@
-+ 2024.12月获取N2证书 日语学习5-12月（每日大底2小时）
++ ~~2024.12月获取N2证书 日语学习5-12月（每日大底2小时）~~
 + 2025.2月 冬入
 + 2025.7月 夏日
-+ 托福（8/9月 90分）学习时间5月-8月 （3个月准备）
++ ~~托业  775  学习时间7月-9月 （2个月准备）~~
 + 专业课
+
+京大知能：
+必选：
+**线性代数、微分积分，アルゴリズムとデータ構造（数据结构、算法）**
+可选 选2：
+**统计学、情报理论（信息论）、信号处理**，パターン認識と機械学習（模式识别和机器学习）、形式语言理论
+1.認知神経科学、知覚・認知心理学（这个一般没人会选） 2.**統計学** 3.パターン認識と機械学習 4.**情報理論（信息论）** 5.**信号処理** 6.**形式言語理論、計算理論、離散数学**
+
+版大：
+必选：
+算法和程序设计
+计算机系统和系统程序
+```
+数の表現、演算制御、命令実行制御、記憶制御、入出力制御 等
+システムプログラム分野：
+プロセス管理、処理装置管理、記憶管理、入出力管理、
+ファイル管理 等
+```
+选修   选2：
+离散构造、计算理论、通信网、数学解析と信号处理
+
+
+九大：
+数学：
+线性代数，分析/微积分
+向量分析、概率统计  2选一
+专门：
+6选2
+情报理论（信息论），自动机和语言，算法，计算机体系结构
+
+东工：
+
+名大：
+8选6
+信息论、离散、程序设计、自动机、算法、计算机体系结构 操作系统、情报网络网络、逻辑
+
+驻波：
+神户：
+广岛：
+千叶：
+
+学习顺序： 微积分（18.02 向量分析）->线性代数->数据结构->算法->概率统计->信息论->计算机体系结构->网络
+结束时间预定：
+18.01 1.10
+18.02 2.1
+线性代数 2.20
+数据结构 3.10
+算法 4.20
+概率论 5.10
+信息论 6.01
+计算机体系结构 6.20
