--- a/日语/新标日/新标日中级上/第三单元/第十一课.md
+++ b/日语/新标日/新标日中级上/第三单元/第十一课.md
@@ -28,9 +28,16 @@
 *表示相差很大的惯用表达方式*
 ー＞僕の中国語は下手で、鈴木さんとは比べ物になりません。
 ー＞ええ、比べものになりませんよ。
+
 #### とともに
 *AとともにＢ　
 1.A是原因，随着A的动作、变化，B的动作、变化也同步进行。
 2.A和B同时进行，接续形式是“动词（基本型）/名词+とともに*
 ー＞経済の発展とともに、公害が問題になっている。
 ー＞原因を調査するとともに、再発を防ぐための努力もしていかなければならない。
+
+次々　つぎつぎ
+芸術　げいじゅつ
+沖縄　おきなわ
+青い　あおい
+とはくらべものにならない
