--- a/修士/时间计划.md
+++ b/修士/时间计划.md
@@ -45,7 +45,11 @@
 广岛：
 千叶：
 
-学习顺序： 微积分（18.02 向量分析）->线性代数->数据结构->算法->概率统计->信息论->计算机体系结构->网络
+学习顺序：
+```
+微积分18.01（18.02 向量分析）->线性代数 18.06 -> 离散 -> 数据结构 CS61B-> 算法 -> 计算机体系结构 CS61C -> 概率统计 -> 信息论 -> 数电 -> 自动机
+```
+
 结束时间预定：
 18.01 1.10
 18.02 2.1
