--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -5,7 +5,7 @@
 + 2000-10-27
 + 电话：+86 15380250951
 + 邮箱：gumi.200010@gmail.com 799234763@qq.com
-+ 籍贯：江苏省连云港市灌南县
++ 国籍：中国
 + github:https://github.com/GUMI-21
 + Bilibili:https://space.bilibili.com/27238764?spm_id_from=333.1007.0.0
 + X:https://x.com/Khynpe50k02pwCt
@@ -13,6 +13,23 @@
 + 中文：母语
 + English: TOEIC 775
 + 日本語：N2  120points
+### 教育背景
++ 2018.09~2022.07 江苏大学 通信工程（本科）
+	+ 大一计算机学院科协优秀干事，大二计算机学院科协副部长；
+	+ CET-6；
+	+ RHCE认证，id:200-161-131；
+	+ 绩点：2.72
+	+ 加权平均分：77.2
++ CS Learning
+	+ MIT 18.01  Single Variable Calculus
+		+ begin: 2024.12.10  end: 2025.1.5
+	+ MIT 18.02  Multivariable Calculus
+		+ begin: 2025.1.6 end: 2025.1.30
+	+ MIT 18.06 Linear Algebra
+		+ begin: 2025.2.1 end: 
++ Language Learning:
+	+ Japnese 2024.5.10-2024.12.1 N2 120points
+	+ English Toeic 775points 375+400
 ### 技术栈
 + 编程语言：Go，Python，C，php
 + 技术：熟悉常用数据结构与算法，go语言服务端开发技术栈
@@ -28,19 +45,7 @@
 - 熟悉git开发工具，分支/commit管理；
 - 代码风格良好，命名规范，习惯性地写注释，在开发时会考虑代码复用性；
 ```
-### 教育背景
-+ 2018.09~2022.07 江苏大学 通信工程（本科）
-	+ 大一计算机学院科协优秀干事，大二计算机学院科协副部长；
-	+ CET-6；
-	+ RHCE认证，id:200-161-131；
-	+ 绩点：2.72
-	+ 加权平均分：77.2
-+ CS Learning
-	+ MIT 18.01  Single Variable Calculus
-		+ begin: 2024.12.10  end: 2025.1.5
-	+ MIT 18.02  Multivariable Calculus
-		+ begin: 2025.1.6 end: 2025.1.30
-+ 
+
 ### 工作经验
 + 2022.07~2024.1.19 北京星制科技（昆仑天工）
 	+ Golang服务端工程师
