--- a/修士/时间计划.md
+++ b/修士/时间计划.md
@@ -59,3 +59,22 @@
 概率论 5.10
 信息论 6.01
 计算机体系结构 6.20
+
+
+BG: 江苏大学  通信工程  GPA 2.7/77.8
+北京中厂 2年后端开发
+
+实际时间线：
+1.19 离职
+3月份了解修士考试->整理信息、摆烂 3-5月
+5月报语校->学日语->次年2月鸽语校
+
+学习时间线：
+Japanese 5.10-7.12 JTEST F rank 
+English 8.1 9.22 TOEIC 775
+Japanese 10.1-12.1 N2 120
+单元微积分 MIT18.01   12.10-1.5  
+多元微积分，向量解析 MIT18.02 1.6-1.26
+线性代数  MIT18.06  2.1-2.18  （unit3 比较难 学的不太扎实）
+
+
