--- a/英语/托业/笔记/国版1.md
+++ b/英语/托业/笔记/国版1.md
@@ -161,7 +161,7 @@ gasline  n.汽油
 recyclable  adj.可回收利用的；可再循环的
 trash can   垃圾桶
  claim      n.v. 要求；声称
-*121. Those paper boxes are to be (taken) to the recyclable trush can if no one claims them.*
+*121. Those paper boxes are to be (taken) to the recyclable trush can if no one aclaims them.*
 enroll      v.等级；注册；录取；招收
 enrollment   n.入学；等级；注册；加入人数
 *124. (Enrollmennt) in universities around the country has more than doubled aompared to thie time last year.*
