--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -26,7 +26,7 @@
 	+ MIT 18.02  Multivariable Calculus
 		+ begin: 2025.1.6 end: 2025.1.30
 	+ MIT 18.06 Linear Algebra
-		+ begin: 2025.2.1 end: 
+		+ begin: 2025.2.1 end: 2025.2.18  65 hours
 + Language Learning:
 	+ Japnese 2024.5.10-2024.12.1 N2 120points
 	+ English Toeic 775points 375+400
