--- a/修士/时间计划.md
+++ b/修士/时间计划.md
@@ -67,7 +67,7 @@ BG: 江苏大学  通信工程  GPA 2.7/77.8
 实际时间线：
 1.19 离职
 3月份了解修士考试->整理信息、摆烂 3-5月
-5月报语校->学日语->次年2月鸽语校
+5月报语校->学日语
 
 学习时间线：
 Japanese 5.10-7.12 JTEST F rank 
